kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project-deployment
  namespace: devops
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: flask-project
  template:
    metadata:
      labels:
        app: flask-project
    spec:
      containers:
        - name: flask-project
          image: sekuloska/devops_project-web
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
