kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pods
  namespace: devops
spec:
  selector:
    app: flask-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
